--- a/C#/RobotInterface/RobotInterface.csproj
+++ b/C#/RobotInterface/RobotInterface.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Robot.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,7 +96,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Users\TP_EO_6\Desktop\ExtendedSerialPort\ExtendedSerialPort.csproj">
+    <ProjectReference Include="..\..\..\..\Users\TABLE 6\Downloads\ExtendedSerialPort\ExtendedSerialPort\ExtendedSerialPort.csproj">
       <Project>{21ac599e-e3d5-4181-aa0f-7c2e00cca016}</Project>
       <Name>ExtendedSerialPort</Name>
     </ProjectReference>
